# overlaytxt

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README-EN.md  README.md  rustfmt.toml
.agents/skills/directcomposition-overlay-pitfalls/: SKILL.md
.agents/skills/directcomposition-overlay-pitfalls/references/: alpha-mode-premultiplied.md  background-mask-divider.md  bitmap-from-surface-alpha.md  buffer-count-flip.md  dcomp-target-not-saved.md  image-vertical-align.md  layered-window-alpha.md  setwindowrgn-empty-region.md  vulkan-overlay-limitation.md  window-style-conflict.md  wmnchittest-unreliable.md
.github/workflows/: publish.yml
docs/: requirements.md
examples/: basic.rs
src/: danmaku.rs  lib.rs  overlay.rs  renderer.rs  window.rs
